--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/application.css
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/application.css
@@ -1,6 +1,10 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 
 .titled-pane > .content > * {
+    -fx-padding: 4px;
+}
+
+.no-padding-content > .content > * {
     -fx-padding: 0px;
 }
 
