--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
@@ -12,10 +14,13 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TreeView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="topBorderPanel" maxHeight="Infinity" maxWidth="Infinity" minHeight="350" minWidth="400"
@@ -96,7 +101,30 @@
 					<content>
 						<BorderPane>
 							<left>
-								<ListView fx:id="crystalsListView" prefHeight="377.0" prefWidth="143.0" BorderPane.alignment="CENTER" />
+								<VBox alignment="TOP_CENTER" maxHeight="Infinity" prefWidth="143.0" styleClass="custom-box-border">
+									<children>
+										<ListView fx:id="crystalsListView" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
+										<HBox alignment="CENTER" prefHeight="30.0" spacing="8.0">
+											<children>
+												<Button fx:id="removeCrystalButton" mnemonicParsing="false" onAction="#removeCrystal" text="Remove">
+													<graphic>
+														<ImageView>
+															<image>
+																<Image url="@images/delete.png" />
+															</image>
+														</ImageView>
+													</graphic>
+												</Button>
+											</children>
+											<padding>
+												<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+											</padding>
+										</HBox>
+									</children>
+									<padding>
+										<Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
+									</padding>
+								</VBox>
 							</left>
 							<center>
 								<ScrollPane fx:id="tabCrystalsCenterPane" fitToHeight="true" fitToWidth="true" hvalue="1.0" prefHeight="352.0"
@@ -109,14 +137,98 @@
 						</BorderPane>
 					</content>
 				</Tab>
-				<Tab fx:id="tabDiffractions" text="Diffractions">
+				<Tab fx:id="tabInstrumental" text="Instrumental">
 					<content>
 						<BorderPane>
 							<left>
-								<ListView fx:id="diffractionsListView" prefWidth="143.0" BorderPane.alignment="CENTER" />
+								<VBox alignment="TOP_CENTER" maxHeight="Infinity" prefWidth="180.0" styleClass="custom-box-border">
+									<children>
+										<ListView fx:id="instrumentalListView" prefWidth="143.0" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
+										<HBox alignment="CENTER" prefHeight="30.0" spacing="8.0">
+											<children>
+												<Button fx:id="addInstrumentButton" mnemonicParsing="false" onAction="#addInstrument" text="Add">
+													<graphic>
+														<ImageView>
+															<image>
+																<Image url="@images/add.png" />
+															</image>
+														</ImageView>
+													</graphic>
+												</Button>
+												<Button fx:id="removeInstrumentButton" mnemonicParsing="false" onAction="#removeInstrument" text="Remove">
+													<graphic>
+														<ImageView>
+															<image>
+																<Image url="@images/delete.png" />
+															</image>
+														</ImageView>
+													</graphic>
+												</Button>
+											</children>
+											<padding>
+												<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+											</padding>
+										</HBox>
+									</children>
+								</VBox>
 							</left>
 							<center>
-								<ScrollPane fx:id="tabDiffractionsCenterPane" fitToHeight="true" fitToWidth="true" hvalue="1.0"
+								<ScrollPane fx:id="tabInstrumentalCenterPane" fitToHeight="true" fitToWidth="true" hvalue="1.0"
+									prefHeight="352.0" prefWidth="618.0" BorderPane.alignment="TOP_LEFT">
+									<padding>
+										<Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+									</padding>
+								</ScrollPane>
+							</center>
+						</BorderPane>
+					</content>
+				</Tab>
+				<Tab fx:id="tabPhases" text="Phases">
+					<content>
+						<BorderPane>
+							<left>
+								<VBox alignment="TOP_CENTER" maxHeight="Infinity" prefWidth="180.0" styleClass="custom-box-border">
+									<children>
+										<ComboBox fx:id="instrumentalComboBox" prefHeight="19.0" prefWidth="180.0" >
+											<VBox.margin>
+												<Insets bottom="4.0" left="8.0" right="8.0" top="4.0" />
+											</VBox.margin>
+										</ComboBox>
+										<ListView fx:id="phasesListView" prefWidth="143.0" BorderPane.alignment="CENTER"  VBox.vgrow="ALWAYS" />
+										
+										<HBox alignment="CENTER" prefHeight="30.0" spacing="8.0">
+											<children>
+												<Button fx:id="addPhaseButton" mnemonicParsing="false" onAction="#addPhase" text="Add">
+													<graphic>
+														<ImageView>
+															<image>
+																<Image url="@images/add.png" />
+															</image>
+														</ImageView>
+													</graphic>
+												</Button>
+												<Button fx:id="removePhaseButton" mnemonicParsing="false" onAction="#removePhase" text="Remove">
+													<graphic>
+														<ImageView>
+															<image>
+																<Image url="@images/delete.png" />
+															</image>
+														</ImageView>
+													</graphic>
+												</Button>
+											</children>
+											<padding>
+												<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+											</padding>
+										</HBox>
+									</children>
+									<padding>
+										<Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
+									</padding>
+								</VBox>
+							</left>
+							<center>
+								<ScrollPane fx:id="tabPhasesCenterPane" fitToHeight="true" fitToWidth="true" hvalue="1.0"
 									prefHeight="352.0" prefWidth="618.0" BorderPane.alignment="TOP_LEFT">
 									<padding>
 										<Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
