--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -128,6 +129,28 @@
          </rowConstraints>
 		</GridPane>
 		
+		<GridPane hgap="8">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+				<ColumnConstraints fillWidth="true" hgrow="ALWAYS" minWidth="400.0" />
+			</columnConstraints>
+			<children>
+				<Label text="alpha:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+				<Label text="beta:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+				<Label text="gamma:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+				<HBox fx:id="alphaParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+				<HBox fx:id="betaParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<HBox fx:id="gammaParContainer" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="30.0" spacing="4.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+			</children>
+         <rowConstraints>
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
+		</GridPane>
+		
+		
 		
 		<TitledPane animated="false" text="Scattering Powers">
 			<content>
@@ -144,10 +167,16 @@
 								<TableColumn fx:id="scatPowersTableBisoValueColumn" prefWidth="100.0" text="Biso" />
 							</columns>
 						</TableView>
+						<StackPane fx:id="scatPowersDetailsStackPane" alignment="TOP_LEFT" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity">
+							<padding>
+								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+							</padding>
+						</StackPane>
+						
+						<!-- 
 						<HBox alignment="CENTER">
 							<children>
 								<Button mnemonicParsing="false" text="Add Sphere Scattering Power" />
-
 								<Button mnemonicParsing="false" text="Add Atomic Scattering Power">
 									<HBox.margin>
 										<Insets left="16.0" />
@@ -158,6 +187,7 @@
 								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
 							</padding>
 						</HBox>
+						 -->
 					</children>
 				</VBox>
 			</content>
@@ -185,11 +215,13 @@
 								<TableColumn fx:id="atomsTableOccupColumn" prefWidth="95.0" text="Occup" />
 							</columns>
 						</TableView>
+						<!-- 
 						<Button mnemonicParsing="false" text="Add Atom">
 							<VBox.margin>
 								<Insets top="12.0" />
 							</VBox.margin>
 						</Button>
+						 -->
 					</children>
 				</VBox>
 			</content>
