--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/crystal.fxml
@@ -159,17 +159,17 @@
 	                	<Insets bottom="0" left="0" right="0" top="0" />                 
 	                </padding>
 					<children>
-						<TableView fx:id="scatPowersTableView" prefHeight="400.0" prefWidth="579.0" tableMenuButtonVisible="true">
+						<TableView fx:id="scatPowersTableView" prefHeight="400.0" prefWidth="579.0">
 							<columns>
 								<TableColumn fx:id="scatPowersTableNameColumn" prefWidth="75.0" text="Name" />
 								<TableColumn fx:id="scatPowersTableSymbolColumn" prefWidth="85.0" text="Symbol" />
-								<TableColumn fx:id="scatPowersTableColourColumn" prefWidth="120.0" text="Colour" />
+								<TableColumn fx:id="scatPowersTableColourColumn" prefWidth="120.0" text="Colour"/>
 								<TableColumn fx:id="scatPowersTableBisoValueColumn" prefWidth="100.0" text="Biso" />
 							</columns>
 						</TableView>
 						<StackPane fx:id="scatPowersDetailsStackPane" alignment="TOP_LEFT" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity">
 							<padding>
-								<Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+								<Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
 							</padding>
 						</StackPane>
 						
@@ -198,23 +198,31 @@
 				<Insets top="8.0" />
 			</VBox.margin>
 		</TitledPane>
-		<TitledPane animated="false" layoutX="10.0" layoutY="236.0" text="Atoms">
+		<TitledPane animated="false" layoutX="10.0" layoutY="236.0" text="Scatterers">
 			<content>
 				<VBox alignment="TOP_CENTER">
 					<padding>
 	                	<Insets bottom="4 " left="4" right="4" top="4" />                 
 	                </padding>
 					<children>
-						<TableView fx:id="atomsTableView" tableMenuButtonVisible="true">
+						<TableView fx:id="scatterersTableView" tableMenuButtonVisible="true">
 							<columns>
-								<TableColumn fx:id="atomsTableNameColumn" prefWidth="75.0" text="Name" />
-								<TableColumn fx:id="atomsTableScatteringPowerColumn" minWidth="20.0" prefWidth="120.0" text="Scattering Power" />
-								<TableColumn fx:id="atomsTableXColumn" prefWidth="95.0" text="X" />
-								<TableColumn fx:id="atomsTableYColumn" prefWidth="95.0" text="Y" />
-								<TableColumn fx:id="atomsTableZColumn" prefWidth="95.0" text="Z" />
-								<TableColumn fx:id="atomsTableOccupColumn" prefWidth="95.0" text="Occup" />
+								<TableColumn fx:id="scatterersTableNameColumn" prefWidth="75.0" text="Name" />
+								<!-- 
+								<TableColumn fx:id="scatterersTableScatteringPowerColumn" minWidth="20.0" prefWidth="120.0" text="Scattering Power" />
+								 -->
+								<TableColumn fx:id="scatterersTableXColumn" prefWidth="95.0" text="X" />
+								<TableColumn fx:id="scatterersTableYColumn" prefWidth="95.0" text="Y" />
+								<TableColumn fx:id="scatterersTableZColumn" prefWidth="95.0" text="Z" />
+								<TableColumn fx:id="scatterersTableOccupColumn" prefWidth="95.0" text="Occup" />
 							</columns>
 						</TableView>
+						<StackPane fx:id="scatterresDetailsStackPane" alignment="TOP_LEFT" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity">
+							<padding>
+								<Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+							</padding>
+						</StackPane>
+						
 						<!-- 
 						<Button mnemonicParsing="false" text="Add Atom">
 							<VBox.margin>
@@ -224,6 +232,18 @@
 						 -->
 					</children>
 				</VBox>
+			</content>
+			<font>
+				<Font name="System Bold" size="12.0" />
+			</font>
+			<VBox.margin>
+				<Insets top="8.0" />
+			</VBox.margin>
+		</TitledPane>
+		
+		<TitledPane animated="false" text="Anti Bump Distance Matrix - TODO">
+			<content>
+				<TableView fx:id="antiBumpDistanceTableView" prefHeight="400.0" prefWidth="579.0" tableMenuButtonVisible="false"/>
 			</content>
 			<font>
 				<Font name="System Bold" size="12.0" />
